[package]
name = "confluence"
version = "0.3.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
description = "Access and modify Atlassian Confluence pages from Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Nercury/confluence-rs"
documentation = "http://nercury.github.io/confluence-rs/confluence/index.html"
keywords = ["confluence", "atlassian", "api", "soap", "wiki"]
categories = ["api-bindings"]

[dependencies]
xml-rs = "0.3"
log = "0.3"
hyper = "0.10"
xmltree = "0.2"
chrono = "0.2"

[badges]
travis-ci = { repository = "Nercury/confluence-rs" }