[package]
name = "confluence"
version = "0.3.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
description = "Access and modify Atlassian Confluence pages from Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Nercury/confluence-rs"
documentation = "http://nercury.github.io/confluence-rs/confluence/index.html"
keywords = ["confluence", "atlassian", "api", "soap", "wiki"]
categories = ["api-bindings"]

[dependencies]
xml-rs = "0.7"
log = "0.4"
reqwest = "0.9"
xmltree = "0.8"
chrono = "0.4"

[badges]
travis-ci = { repository = "Nercury/confluence-rs" }