[package]
name = "confluence"
version = "0.4.1"
authors = ["The confluence-rs Developers"]
description = "Access and modify Atlassian Confluence pages from Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Nercury/confluence-rs"
documentation = "https://docs.rs/crate/confluence/0.3.0"
keywords = ["confluence", "atlassian", "api", "soap", "wiki"]
categories = ["api-bindings"]

[dependencies]
xml-rs = "0.8"
log = "0.4"
reqwest = "0.9"
xmltree = "0.8"
chrono = "0.4"

[badges]
travis-ci = { repository = "Nercury/confluence-rs" }
